# LinguoFix

./: .env  CDC_UP_Project_Charter_team_3_CS-32.doc  Cargo.toml  Example - Gaant Chart - team 3-CS-32.doc  Lab 6_team 3_CS-32.docx  M101-project-vison-statement-team-3-CS-32.docx  Project-Management-Plan-team 3-CS-32.doc  QATestLab-Testplan-Project LinguoFix - team 3_CS-32.docx  README.md  Software Requirements Specification__SRS4.0 - team 3_CS-32.doc  sample project plan - team 3-CS-32.doc
src/: errors.rs  handlers.rs  main.rs  models.rs
src/services/: correction.rs  deepl.rs  mod.rs  textgears_corrector.rs  translate.rs
static/: about.html  correction.html  index.html  translate.html
static/css/: style.css
static/js/: correction.js  translation.js
