[package]
name = "linguofix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.3"
tower-http = { version = "0.5", features = ["fs", "cors"] }
async-trait = "0.1"
thiserror = "1.0"
headers = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
jsonwebtoken = "9.3.1"
dotenv = "0.15"
languagetool-rust = "2.1.5"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.27"
urlencoding = "2.1.3"

